# huffman

./: .gitignore  CMakeLists.txt  LICENSE  README.md  decoding.c  encoding.c  encoding.h  list.c  list.h  main.c  processFile.c  processFile.h
src/headers/: decoding.h  encoding.h  list.h  processFile.h
src/source/: decoding.c  encoding.c  list.c  main.c  processFile.c
